# wiideskw

./: .gitignore  index.html  package.json  pnpm-lock.yaml  setup_firewall.bat  vite.config.js
public/: robots.txt  sitemap.xml
smiles/: footer.js  header.js  main.js  rutas.js  tauri-stub.js  widev.js  wii.js
smiles/views/: acerca.js  config.js  inicio.js  transmitir.js
src/: estado.js  estados.js  firebase.js  footer.js  header.js  main.js  rutas.js  servicios.js  widev.js  wii.js
src-tauri/: .gitignore  Cargo.toml  tauri.conf.json
src-tauri/src/: capture.rs  input.rs  lab1.rs  lib.rs  main.rs  server.rs
src-tauri/src/capturas/: dxgi.rs  mod.rs
src-tauri/src/config/: mod.rs
src-tauri/src/control/: actualizar_red.rs  encender.rs  lab.rs  mod.rs
src-tauri/src/general/: json.rs  mod.rs  navegador.rs  pin.rs  ventana.rs
src-tauri/src/input/: win32.rs
src-tauri/src/smile/: actualizar_red.rs  apagar.rs  encender.rs  mod.rs  suspender.rs
src-tauri/src/tools/: mod.rs
src-tauri/src/tools/capturas/: dxgi.rs  mod.rs
src-tauri/src/tools/config/: hash.rs  json.rs  mod.rs
src-tauri/src/tools/control/: mod.rs
src-tauri/src/tools/control/apagar/: win32.rs
src-tauri/src/tools/control/encender/: mod.rs  verificar.rs
src-tauri/src/tools/input/: win32.rs
src-tauri/src/tools/power/: win32.rs
src-tauri/src/tools/webrtc/: mod.rs  signaling.rs
src-tauri/src/tools/wol/: verificar.rs
src-tauri/src/webrtc/: signaling.rs
src/admin/: admin.css  admin.js  paginas.css  usuarios.css  usuarios.js
src/admin/verificar/: verificar.css  verificar.js
src/gestor/: gestor.css  gestor.js
src/servicios/: control.js  lab1.js
src/todos/: 404.js  inicio.css  inicio.js  login.css  login.js  loginpc.js  widevpro.css  widevpro.js
src/todos/acerca/: acerca.css  acerca.js  contacto.css  contacto.js  cookies.js  descubre.css  descubre.js  (+4 more)
src/usuarios/: lab.js  lab1.js  mensajes.css  mensajes.js  movil2pc.css  movil2pc.js  musica.css  musica.js  notas.css  notas.js  pc2movil.css  pc2movil.js  pc2pc.css  pc2pc.js  pc2web.css  pc2web.js  perfil.css  perfil.js  smile.css  smile.js
(+18 files in other folders)
