[package]
name = "wiidesk"
version = "1.0.0"
edition = "2021"

[lib]
name = "wiidesk_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri            = { version = "2", features = [] }
serde            = { version = "1", features = ["derive"] }
serde_json       = "1"
tokio            = { version = "1", features = ["full"] }
tokio-tungstenite = { version = "0.26", features = [] }
futures-util     = { version = "0.3", default-features = false, features = ["sink", "std"] }
local-ip-address = "0.6"
screenshots      = "0.8"
image            = { version = "0.25", features = ["jpeg"] }
enigo            = "0.2"
anyhow           = "1"
once_cell        = "1"
windows          = { version = "0.61.3", features = ["Win32_UI_HiDpi", "Win32_UI_WindowsAndMessaging"] }

[features]
default          = ["custom-protocol"]
custom-protocol  = ["tauri/custom-protocol"]
