[package]
name = "wiidesk-backend"
version = "1.0.0"
edition = "2021"

[lib]
name = "wiidesk_lib"
crate-type = ["cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-shell = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
ring = "0.17"
hex = "0.4"

[profile.release]
opt-level = 3
strip = true
lto = true
